feat: create WebRTC player